<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_audiotest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_audiotest"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txt_earphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_audiotest"
        android:textSize="20dp" />

    <com.apical.factorytest.WaveformView
        android:id="@+id/view_waveform"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_earphone" />

    <Button
        android:id="@+id/btn_failed"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_failed"
        android:textColor="#ff0000"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_pass"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_pass"
        android:textColor="#00ff00"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_playpause"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_pause"
        android:textSize="@dimen/btn_text_size" />

</RelativeLayout>
