<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_gpsinfo"
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_failed"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_failed"
        android:textColor="#ff0000"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_done"
        android:textColor="#00ff00"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_donewipe"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_done"
        android:text="@string/btn_factoryreset"
        android:textColor="#00ff00"
        android:textSize="@dimen/btn_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_donewipe"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_gpstest"
            android:layout_width="188dp"
            android:layout_height="60dp"
            android:text="@string/btn_gpstest"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</RelativeLayout>
