<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/key_home"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#ff0000"
            android:gravity="center"
            android:text="@string/key_home"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/key_power"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#ff0000"
            android:gravity="center"
            android:text="@string/key_power"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/key_vol_dec"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#ff0000"
            android:gravity="center"
            android:text="@string/key_vol_dec"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/key_vol_inc"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#ff0000"
            android:gravity="center"
            android:text="@string/key_vol_inc"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_failed"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_failed"
        android:textColor="#ff0000"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_pass"
        android:layout_width="188dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_pass"
        android:textColor="#00ff00"
        android:textSize="@dimen/btn_text_size" />

</RelativeLayout>