<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/view_rgb"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_failed"
            android:layout_width="188dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_failed"
            android:textColor="#ff0000"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="188dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_pass"
            android:textColor="#00ff00"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:id="@+id/panel_blk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_bkl_dec"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/btn_bkl_dec"
                android:textSize="@dimen/btn_text_size" />
            <TextView
                android:id="@+id/txt_blk_cur"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20dp" />
            <Button
                android:id="@+id/btn_bkl_inc"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/btn_bkl_inc"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
